# ChangeLog for net-libs/rb_libtorrent
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-libs/rb_libtorrent/ChangeLog,v 1.87 2010/07/01 08:32:25 hwoarang Exp $

*rb_libtorrent-0.15.1 (01 Jul 2010)

  01 Jul 2010; Markos Chandras <hwoarang@gentoo.org>
  +rb_libtorrent-0.15.1.ebuild,
  +files/rb_libtorrent-0.15.1-ax_pthread_asneeded.patch:
  Version bump. Fixes tracker announcement bug wrt bug #325313. Remove
  obsolete configure options. Proper fix for lpthread linking

*rb_libtorrent-0.15.0 (16 Jun 2010)

  16 Jun 2010; Markos Chandras <hwoarang@gentoo.org>
  +rb_libtorrent-0.15.0.ebuild:
  Version bump

  12 Apr 2010; Ben de Groot <yngwin@gentoo.org>
  -rb_libtorrent-0.14.6.ebuild:
  Remove obsolete version. >=0.14.9-r1 ebuilds have several fixes.

  11 Apr 2010; Markos Chandras <hwoarang@gentoo.org>
  rb_libtorrent-0.14.9-r1.ebuild:
  Stable on amd64 wrt bug #312825

*rb_libtorrent-0.14.10 (10 Apr 2010)

  10 Apr 2010; Ben de Groot <yngwin@gentoo.org>
  +rb_libtorrent-0.14.10.ebuild:
  Version bump. Fixes bug #313457.

  08 Apr 2010; Christian Faulhammer <fauli@gentoo.org>
  rb_libtorrent-0.14.9-r1.ebuild:
  stable x86, bug 312825

  02 Apr 2010; Ben de Groot <yngwin@gentoo.org>
  -rb_libtorrent-0.14.9.ebuild:
  Remove version obsoleted by the revbump

*rb_libtorrent-0.14.9-r1 (27 Mar 2010)

  27 Mar 2010; Ben de Groot <yngwin@gentoo.org> rb_libtorrent-0.14.6.ebuild,
  -rb_libtorrent-0.14.8-r2.ebuild, rb_libtorrent-0.14.9.ebuild,
  +rb_libtorrent-0.14.9-r1.ebuild,
  +files/rb_libtorrent-0.14.9-as-needed-fix.patch:
  Revbump to fix bugs with as-needed (#276873) and mixed libtool (#298069).
  Add blocker to mldonkey when examples useflag is enabled (#292998). Remove
  older ~arch ebuild.

*rb_libtorrent-0.14.9 (27 Feb 2010)

  27 Feb 2010; Raúl Porcel <armin76@gentoo.org>
  +rb_libtorrent-0.14.9.ebuild:
  Version bump

*rb_libtorrent-0.14.8-r2 (15 Jan 2010)

  15 Jan 2010; Ben de Groot <yngwin@gentoo.org>