@@ -1,15 +1,29 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX 0.14.6-configure-ldflags-fix.patch 364 RMD160 e637a5c5116892fc7b27d5245abb913c876d2781 SHA1 ef62a4a94119d219c1c93a61c449dafe9c550ecb SHA256 38582ae08e589848fd09cefe5295da74abc3a296c1f6954037caf4a6deef8933
 AUX rb_libtorrent-0.14.8-as-needed-fix.patch 357 RMD160 392f35d48dfd14cdd1d23edc0fb111ab954996dc SHA1 1fee86047249e29d82a4f2492dafd27d156a66ef SHA256 5d5dadd95ab8ab21b4c537d7abdda9f52926331ac658054de189fb92adbd0583
 AUX rb_libtorrent-0.14.8-boost-detect.patch 1969 RMD160 8d2c4b412a72b69978bef1f8c659941473657a79 SHA1 2ec58b038e9c1b896b1eeb42e646afbf4f9af5ea SHA256 63d782c54b18ff1fccc08345c4b9afe112b146fa41021da3d717ee313c862ec0
 AUX rb_libtorrent-0.14.9-as-needed-fix.patch 520 RMD160 e75c51c39acd3df37274d465296406d24328a8cf SHA1 2a73ad7edc9b98bd16466dde1112542336b9fd1a SHA256 04d0b833d109523764bbb410cebc59196a047bd72a8c6267a32bdf458a48877c
 AUX rb_libtorrent-0.15.1-ax_pthread_asneeded.patch 4254 RMD160 57ecaa0aba6363cbac669f901529c1b157de9aa5 SHA1 af7171eadbe4e2dbcd9fbf5a0752579b9a6d3890 SHA256 aeba842df39d7149ef3722b6c62956f7c20ed1a81b778252ea7ed0514ab2ece3
 DIST libtorrent-rasterbar-0.14.10.tar.gz 1997446 RMD160 8492917f54b482d5a195af00a5c89756c6282a4d SHA1 68303b76ef88d1315725c9d114edd8bc95972c83 SHA256 524a19effb6b7e410a20e385e0d0421bfefc1d3f87cb7f78b77f391f12351957
+DIST libtorrent-rasterbar-0.14.11.tar.gz 1989671 RMD160 2f8d9708c41f294578ecca5299c81fbfbeec1c8f SHA1 78f62855af4498a13fa7982813f693e8d7cd5e65 SHA256 919b15c5f1d2d2303237d06ca1320ce929e22195e29250dbc9044ab3fc2fb07f
 DIST libtorrent-rasterbar-0.14.9.tar.gz 1989956 RMD160 67f31b8dd98a3ead862a042ae226b23bdeb242a0 SHA1 cd7579100529cb2b0f0b4fcd2bee3d28c35b74c3 SHA256 08ea1eeea7d0fb8ed2ca2628c2e9c79d3bacc9f08011b4d9020a15dcd24e6ea3
 DIST libtorrent-rasterbar-0.15.0.tar.gz 2569328 RMD160 fa91bdcaf39e6d0da2c68346c9acffaa62a6a846 SHA1 ebc9ce111f59e538aff17102fcce907fd967cd8b SHA256 e1a79045ad041dd82850d2255037108bb17dcbe9a9a8819169a2624b72667db0
 DIST libtorrent-rasterbar-0.15.1.tar.gz 2464727 RMD160 1408abbf37c77059b9db1693c94da9d31b2c5462 SHA1 0a6e24c4a137d202243fab5ed4cf3c6acecebde9 SHA256 a837cd101177b24989609191cee568bc94b2defab13ac28c97b6c0951c73a952
+DIST libtorrent-rasterbar-0.15.2.tar.gz 2567485 RMD160 d38c6df0e2be2268ba3271f7b9385203d89b614d SHA1 e336424824f46bedb189dcbe904393f03cc780a3 SHA256 04f22a8b0f1bee4c7025cf107a8c1f851682b0be81d1b2df1840dec0aa19ff16
 EBUILD rb_libtorrent-0.14.10.ebuild 2449 RMD160 9f019c36a704444cfc39787ee8fa9ce2c7101f2c SHA1 07545b2c436663c7051cdfc48538523464d68b24 SHA256 16324ef88bb44dec8dfccacfc4255a6d62b73817a8ce7eee010b6f07081f27ed
+EBUILD rb_libtorrent-0.14.11.ebuild 2451 RMD160 8fe1e07e7e5d38fa3c3a4e98b04b9d870b9b6acf SHA1 d0a3d3461eb97a16cbeee3fbf54e367490fa1532 SHA256 30b12201bf5a768884e5e92b43bec265736a90851deca3f48908c7e62760c6bb
 EBUILD rb_libtorrent-0.14.9-r1.ebuild 2451 RMD160 a9f90e3929c6935c40402e6f9f4a325e8bdad4eb SHA1 9ea40a83bf1c5b9ab3d2928e500a17995a64b8e4 SHA256 24b861675f42cd623145fd606069bfee513ee3487f89f5588465c637ef201996
 EBUILD rb_libtorrent-0.15.0.ebuild 2451 RMD160 266bd9aace4bb081180555c96cf0a212545402f8 SHA1 42a663b25929d9732301d63862dbd661e93bd67e SHA256 e0d9fc01ac0627fc828ce3e610fb6bee860f5e3bec4c75cdbb8767c20258250c
 EBUILD rb_libtorrent-0.15.1.ebuild 2174 RMD160 7a6bb8c8fc6f56ea709cc9ea14b1de09a0377e3b SHA1 37b6ac7099275586208332e6bb15e7a8951fb511 SHA256 cb8d841dc8dc93be970002515ff7ec6f6229d6a74a3334aafb066d74d1cbd861
-MISC ChangeLog 15118 RMD160 5eba5ceae50c54152f1d51d35a9c7306fcea9602 SHA1 b6855dd85b1957ac1f53d06698b474f2bc571ea4 SHA256 098d54e2c33e85fb0bf94168b0caa9d0aad5e8b9c018056f4568a0fd33ae5a9a
+EBUILD rb_libtorrent-0.15.2.ebuild 2182 RMD160 1ab6adafa99965004c5141f443f5493e5b168e23 SHA1 ff941b76222d0c25cbe73345c4b0e85bda2fd8e1 SHA256 d8dc6b2b9bee4c792ee4f018739cbf984575b8af97dbff5ddd2ff265a15c19ac
+MISC ChangeLog 15324 RMD160 4908e1678c358961fc8df97c4d05e286f3ff3ac6 SHA1 fd2d5fcc2b592146b2bc71c3b6489857cd6d3547 SHA256 17e8267a14911d49e7e016f34529b379ccf5f8abc53b12314a167bb485e76b10
 MISC metadata.xml 180 RMD160 b3fdae264805d1dbe224d18e30b43cc9379b48c0 SHA1 3ece90b24dcd1ecd3e833660e8094afa809d2d93 SHA256 d4bbc70ee1028611e44086fc0b56d097b6945f22c66750538034bca5bf699f5c
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iEYEARECAAYFAkxv07EACgkQ9/cejkQaxBDjBwCffVfJX9h7df1gi8PiQ6yqthN9
+1GMAn3kix1liQFXnR89r1IJnkTckB8lT
+=A7PV
+-----END PGP SIGNATURE-----
